Verticle alignment of video issue

--- a/front-end/Assets/src/css/pages/_thankyou-form2.scss
+++ b/front-end/Assets/src/css/pages/_thankyou-form2.scss
@@ -196,7 +196,6 @@
                     position: absolute;
                     top: 0;
                     transform: scale(0.5);
-                    padding-top: 15px;
                 }
             }
             img{
